[gd_scene load_steps=5 format=3 uid="uid://b4w8x5h3m7n2q"]

[ext_resource type="Script" uid="uid://dcn0jlw0dl13f" path="res://scripts/GameManager.gd" id="1_7n8m3"]
[ext_resource type="Script" uid="uid://4xu8rck3wfde" path="res://scripts/Player.gd" id="2_5k8x2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2"]
radius = 30.0

[node name="Main" type="Node2D"]
script = ExtResource("1_7n8m3")

[node name="Background" type="ColorRect" parent="."]
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="Player" type="Area2D" parent="."]
position = Vector2(360, 640)
script = ExtResource("2_5k8x2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_1")

[node name="Sprite" type="ColorRect" parent="Player"]
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.2, 0.8, 0.2, 1)

[node name="Enemy" type="Area2D" parent="."]
position = Vector2(360, 200)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
shape = SubResource("CircleShape2D_2")

[node name="Sprite" type="ColorRect" parent="Enemy"]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
color = Color(0.8, 0.2, 0.2, 1)

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 48
text = "Score: 0"

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.9)
offset_left = 160.0
offset_top = 440.0
offset_right = 560.0
offset_bottom = 840.0

[node name="GameOverLabel" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Game Over!"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Final Score: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 70.0
offset_right = 75.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Restart"

[connection signal="area_entered" from="Enemy" to="." method="_on_enemy_area_entered"]
[connection signal="pressed" from="GameOverPanel/RestartButton" to="." method="_on_restart_button_pressed"]
